[gd_scene load_steps=4 format=3 uid="uid://devfdee6wy2b2"]

[ext_resource type="Script" uid="uid://6gklcollpp3x" path="res://Cenas/main.gd" id="1_n6gaj"]
[ext_resource type="FontFile" uid="uid://dm3ch1vmt4ixr" path="res://Assets/Fonts/font.ttf" id="3_k74ne"]
[ext_resource type="PackedScene" uid="uid://3i8yd5lmfnor" path="res://Cenas/pie.tscn" id="4_n6gaj"]

[node name="Main" type="Node"]
script = ExtResource("1_n6gaj")

[node name="Background" type="ColorRect" parent="."]
offset_left = 2.0
offset_top = 1.0
offset_right = 1282.0
offset_bottom = 721.0

[node name="Pie" parent="." instance=ExtResource("4_n6gaj")]
position = Vector2(640, 234)

[node name="WinnerLabel" type="Label" parent="."]
modulate = Color(0.94902, 0.815686, 0.921569, 1)
offset_left = 428.0
offset_top = 74.0
offset_right = 485.0
offset_bottom = 154.0
pivot_offset = Vector2(29, 12)
theme_override_fonts/font = ExtResource("3_k74ne")
theme_override_font_sizes/font_size = 66
horizontal_alignment = 1

[node name="SpawnPoint1" type="Marker2D" parent="."]
position = Vector2(234, 516)

[node name="SpawnPoint2" type="Marker2D" parent="."]
position = Vector2(1070, 531)

[node name="TimeLabel" type="Label" parent="."]
modulate = Color(1, 0.458824, 1, 1)
offset_left = 617.0
offset_top = 187.0
offset_right = 657.0
offset_bottom = 210.0
theme_override_fonts/font = ExtResource("3_k74ne")
theme_override_font_sizes/font_size = 26
